--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ikanban Landing Page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "upgit" : "git add * && git commit -m \" Updated some files , fixed some bugs\" && git push "
   },
   "author": "Daggie Blanqx",
   "license": "ISC",
